Alignment fixes

--- a/styleg2.css
+++ b/styleg2.css
@@ -1,6 +1,3 @@
-.bg{
-  background:#E0E0E0;
-}
 .demo-card-wide.mdl-card {
   width: 600px;
   margin: 100px auto;
@@ -18,7 +15,7 @@
 }
 #submitNum {
     position: absolute;
-    left: 430px;
+    left: 425px;
     top:360px
 }
 
@@ -29,7 +26,7 @@
 
 .textField {
     position: absolute;
-    left: 20px;
+    left: 18px;
 }
 
 #displayScreen {
@@ -43,4 +40,13 @@
     position: absolute;
     right: 50px;
     
+}
+
+.bg {
+    background: #E0E0E0;
+}
+
+#startReset {
+    position: relative;
+    left: -5px;
 }
